# t1m

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  test.cpp
benchmark/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark_complex.cpp  benchmark_complex_explicit.cpp  benchmark_real.cpp
benchmark/benchmark.o.dSYM/Contents/: Info.plist
example/: CMakeLists.txt  example.cpp
include/: block_scatter_matrix.hpp  block_scatter_vector.hpp  definitions.hpp  gemm.hpp  gemm_context.hpp  index_bundle_finder.h  index_bundle_finder.hpp  macrokernel.h  macrokernel.hpp  packing.hpp  packing_1m.hpp  scat.h  scat.hpp  scatter_matrix.h  scatter_matrix.hpp  scatter_vector.h  scatter_vector.hpp  std_ext.hpp  tensor.hpp  tfctc.h  tfctc.hpp  utils.h  utils.hpp
include/old/: gemm.hpp  packs.hpp  packs_1m.hpp  tensor.hpp
include/t1m/: block_scatter_matrix.hpp  block_scatter_vector.hpp  gemm.hpp  gemm_context.hpp  index_bundle_finder.hpp  marray.h  packm.hpp  packm_1m.hpp  packs.hpp  packs_1m.hpp  scatter.hpp  scatter_matrix.hpp  scatter_vector.hpp  std_ext.hpp  t1m.h  t1m.hpp  tensor.h  tensor.hpp  traits.h  utils.hpp
include/t1m/bli/: mappings.h
include/t1m/internal/: blis.h  concepts.h  packing.h  scatter.h  t1m.h  tensor.h  utils.h
include/tfctc/: block_scatter_matrix.hpp  block_scatter_vector.hpp  gemm.hpp  gemm_context.hpp  memory.hpp  packb_1m.hpp  packing.hpp  packing_1m.hpp  packm.hpp  packm_1m.hpp  packs.hpp  packs_1m.hpp  scatter_matrix.hpp  scatter_vector.hpp  std_ext.hpp  tensor.hpp  tfctc.hpp  utils.hpp
src/: CMakeLists.txt  t1m.cpp  tfctc.cpp  tfctc.hpp  utils.hpp
src/internal/: block_scatter_matrix.hpp  gemm.hpp  packing.hpp  packing_1m.hpp  scatter_matrix.hpp  scatter_vector.hpp
test/: CMakeLists.txt  Makefile  test_complex.cpp  test_contraction.cpp  test_packing.cpp  test_real.cpp  test_scatter.cpp  test_utils.cpp
tfctc/tfctc.xcodeproj/: project.pbxproj
